# league-acc-switch

./: .gitignore  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml
src/: bindings.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: check_exec.rs  hello.rs  login.rs  mod.rs
src/app/: App.tsx
src/components/: add-account-dialog.tsx  edit-account.tsx  valid-exec-path.tsx
src/components/ui/: button.tsx  dialog.tsx
