[package]
name = "lol-account-swap"
version = "0.0.0"
description = "An application to swap between multiple League of Legends accounts."
authors = ["ponbac"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [
    "updater",
    "dialog-open",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.79"
thiserror = "1.0.56"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
sysinfo = "0.30.5"
enigo = "0.1.3"
clipboard-win = "5.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1.36.0", features = ["full"] }
