[package]
name = "lol-account-swap"
version = "0.0.0"
description = "An application to swap between multiple League of Legends accounts."
authors = ["ponbac"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
anyhow = "1.0.93"
thiserror = "2.0.3"
specta = "2.0.0-rc.20"
tauri-specta = { version = "2.0.0-rc.20", features = [
    "javascript",
    "typescript",
] }
sysinfo = "0.32.0"
enigo = "0.1.3"
clipboard-win = "5.4.0"
tauri-plugin-shell = "2.0.2"
tauri-plugin-dialog = "2.0.3"
time = "0.3.36"
specta-typescript = "0.0.7"
open = "5.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.41.1", features = ["full"] }

[profile.dev]
debug = 0
strip = "debuginfo"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
